force-app/main/default/objects/Add_On_Products__c/Add_On_Products__c.object-meta.xml
<CustomObject>
    <description>This object is to track and set up product add-ons for existing clients.</description>
    <label>Add-On Product</label>
    <nameField>
        <label>Add-On Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Add-On Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>