force-app/main/default/objects/Add_On_Products__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated with Add-On Product</description>
    <inlineHelpText>Account associated with Add-On Product</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Add-On Products</relationshipLabel>
    <relationshipName>Add_On_Products</relationshipName>
    <type>Lookup</type>
</CustomField>