force-app/main/default/objects/Add_On_Products__c/fields/ACH_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ACH_Enabled__c</fullName>
    <description>Does the client have ACH enabled for Payroll submissions?</description>
    <inlineHelpText>Does the client have ACH enabled for Payroll submissions?</inlineHelpText>
    <label>ACH Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>