force-app/main/default/objects/Add_On_Products__c/fields/Add_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Add_Payroll__c</fullName>
    <label>Add Payroll</label>
    <type>Date</type>
</CustomField>