force-app/main/default/objects/Add_On_Products__c/fields/Added_Payroll_Vendor_to_Paradigm__c.field-meta.xml
<CustomField>
    <fullName>Added_Payroll_Vendor_to_Paradigm__c</fullName>
    <label>Added Payroll Vendor to Paradigm</label>
    <type>Date</type>
</CustomField>