force-app/main/default/objects/Add_On_Products__c/fields/Agreement_for_Services__c.field-meta.xml
<CustomField>
    <fullName>Agreement_for_Services__c</fullName>
    <description>Agreement for Services Received</description>
    <formula>Opportunity__r.Agreement_for_Services_A4S__c</formula>
    <inlineHelpText>Agreement for Services Received</inlineHelpText>
    <label>Agreement for Services</label>
    <type>Checkbox</type>
</CustomField>