force-app/main/default/objects/Add_On_Products__c/fields/Agreement_Received__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Received__c</fullName>
    <description>Date Agreement for Services was signed</description>
    <formula>Opportunity__r.CloseDate</formula>
    <inlineHelpText>Date Agreement for Services was signed</inlineHelpText>
    <label>Agreement Received</label>
    <type>Date</type>
</CustomField>