force-app/main/default/objects/Add_On_Products__c/fields/Amendment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Needed__c</fullName>
    <description>Date client notifies Ubiquity amendment is needed (if applicable)</description>
    <inlineHelpText>Date client notifies Ubiquity amendment is needed (if applicable)</inlineHelpText>
    <label>Amendment Needed</label>
    <type>Date</type>
</CustomField>