force-app/main/default/objects/Add_On_Products__c/fields/Amount_Before_Discount__c.field-meta.xml
<CustomField>
    <fullName>Amount_Before_Discount__c</fullName>
    <description>Amount before discount is applied</description>
    <formula>Opportunity__r.Amount_Before_Discount__c</formula>
    <inlineHelpText>Amount before discount is applied</inlineHelpText>
    <label>Amount Before Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>