force-app/main/default/objects/Add_On_Products__c/fields/Approval_Requested__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Requested</label>
    <type>Checkbox</type>
</CustomField>