force-app/main/default/objects/Add_On_Products__c/fields/Audit_Package_Fees_Billed__c.field-meta.xml
<CustomField>
    <fullName>Audit_Package_Fees_Billed__c</fullName>
    <description>Date Audit Package Fees were billed</description>
    <inlineHelpText>Date Audit Package Fees were billed</inlineHelpText>
    <label>Audit Package Fees Billed</label>
    <type>Date</type>
</CustomField>