force-app/main/default/objects/Add_On_Products__c/fields/Audit_Package_Sent__c.field-meta.xml
<CustomField>
    <fullName>Audit_Package_Sent__c</fullName>
    <description>Date complete Audit Package is sent to client</description>
    <inlineHelpText>Date complete Audit Package is sent to client</inlineHelpText>
    <label>Audit Package Sent</label>
    <type>Date</type>
</CustomField>