force-app/main/default/objects/Add_On_Products__c/fields/Basic_Match_Source_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Basic_Match_Source_Header_Name__c</fullName>
    <label>Basic Match Source Header Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>