force-app/main/default/objects/Add_On_Products__c/fields/Client_Stage__c.field-meta.xml
<CustomField>
    <fullName>Client_Stage__c</fullName>
    <label>Client Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>