force-app/main/default/objects/Add_On_Products__c/fields/Client_Success_Teams__c.field-meta.xml
<CustomField>
    <fullName>Client_Success_Teams__c</fullName>
    <formula>TEXT (Account__r.Client_Support_Teams__c)</formula>
    <label>Client Success Teams</label>
    <type>Text</type>
</CustomField>