force-app/main/default/objects/Add_On_Products__c/fields/Compensation_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Header_Name__c</fullName>
    <description>Name of Compensation Header in client file</description>
    <inlineHelpText>Name of Compensation Header in client file</inlineHelpText>
    <label>Compensation Header Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>