force-app/main/default/objects/Add_On_Products__c/fields/Created_Support_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Created_Support_Tasks__c</fullName>
    <label>Created Support Tasks</label>
    <type>Date</type>
</CustomField>