force-app/main/default/objects/Add_On_Products__c/fields/Current_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Payroll_Provider__c</fullName>
    <description>Current Payroll Provider</description>
    <inlineHelpText>Current Payroll Provider</inlineHelpText>
    <label>Current Payroll Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>