force-app/main/default/objects/Add_On_Products__c/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <description>Client&apos;s Custodian</description>
    <formula>TEXT(Account__r.Custodian__c)</formula>
    <inlineHelpText>Client&apos;s Custodian</inlineHelpText>
    <label>Custodian</label>
    <type>Text</type>
</CustomField>