force-app/main/default/objects/Add_On_Products__c/fields/Data_Cleaning_Method__c.field-meta.xml
<CustomField>
    <fullName>Data_Cleaning_Method__c</fullName>
    <description>What method is used to clean the file prior to uploading?</description>
    <inlineHelpText>What method is used to clean the file prior to uploading?</inlineHelpText>
    <label>Data Cleaning Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Entry</fullName>
            </value>
            <value>
                <fullName>Macro</fullName>
            </value>
            <value>
                <fullName>Outsourced</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>