force-app/main/default/objects/Add_On_Products__c/fields/Date_Given_To_Third_Party_Integrator__c.field-meta.xml
<CustomField>
    <fullName>Date_Given_To_Third_Party_Integrator__c</fullName>
    <label>Date Given To Third Party Integrator</label>
    <type>Date</type>
</CustomField>