force-app/main/default/objects/Add_On_Products__c/fields/Date_Transferred_to_Finch__c.field-meta.xml
<CustomField>
    <fullName>Date_Transferred_to_Finch__c</fullName>
    <label>Date Transferred to Finch</label>
    <type>Date</type>
</CustomField>