force-app/main/default/objects/Add_On_Products__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Opportunity Discount</description>
    <formula>Opportunity__r.Discount__c</formula>
    <inlineHelpText>Opportunity Discount</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>