force-app/main/default/objects/Add_On_Products__c/fields/Discount_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discount_Notes__c</fullName>
    <description>Opportunity Discount Notes</description>
    <formula>Opportunity__r.Discount_Notes__c</formula>
    <inlineHelpText>Opportunity Discount Notes</inlineHelpText>
    <label>Discount Notes</label>
    <type>Text</type>
</CustomField>