force-app/main/default/objects/Add_On_Products__c/fields/Discretionary_Match_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match_Frequency__c</fullName>
    <description>EPS data from EPS Survey</description>
    <inlineHelpText>Frequency of discretionary matching contributions</inlineHelpText>
    <label>Discretionary Match Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Payroll</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>ER Match Contributions not allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>