force-app/main/default/objects/Add_On_Products__c/fields/Downloadable_SOC_1_Approved__c.field-meta.xml
<CustomField>
    <fullName>Downloadable_SOC_1_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downloadable SOC-1 Approved</label>
    <type>Checkbox</type>
</CustomField>