force-app/main/default/objects/Add_On_Products__c/fields/Downloadable_SOC_1_Requested__c.field-meta.xml
<CustomField>
    <fullName>Downloadable_SOC_1_Requested__c</fullName>
    <label>Downloadable SOC-1 Requested</label>
    <type>Date</type>
</CustomField>