force-app/main/default/objects/Add_On_Products__c/fields/Draft_5500_Complete__c.field-meta.xml
<CustomField>
    <fullName>Draft_5500_Complete__c</fullName>
    <description>Draft 5500 Complete for package (Compliance)</description>
    <inlineHelpText>Draft 5500 Complete for package (Compliance)</inlineHelpText>
    <label>Draft 5500 Complete</label>
    <type>Date</type>
</CustomField>