force-app/main/default/objects/Add_On_Products__c/fields/Employee_Detail_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Detail_Report_Name__c</fullName>
    <description>EPS Add on Product field - updated from EPS Survey</description>
    <inlineHelpText>Name of employee detail report from payroll system</inlineHelpText>
    <label>Employee Detail Report Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>