force-app/main/default/objects/Add_On_Products__c/fields/Enhanced_Payroll_Services_Type__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Payroll_Services_Type__c</fullName>
    <description>Level of Enhanced Payroll Services</description>
    <inlineHelpText>Level of Enhanced Payroll Services</inlineHelpText>
    <label>Enhanced Payroll Services Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Payroll + Census</fullName>
            </value>
            <value>
                <fullName>Deferral + Loans</fullName>
            </value>
            <value>
                <fullName>Payroll + Census + Deferral + Loans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>