force-app/main/default/objects/Add_On_Products__c/fields/Estimated_Integration_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Integration_Completion_Date__c</fullName>
    <description>Date the integration is expected to be completed. Typically 2 - 6 weeks from request date.</description>
    <inlineHelpText>Date the integration is expected to be completed. Typically 2 - 6 weeks from request date.</inlineHelpText>
    <label>Estimated Integration Completion Date</label>
    <type>Date</type>
</CustomField>