force-app/main/default/objects/Add_On_Products__c/fields/Fee_Waive_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_Waive_Date__c</fullName>
    <description>Date the fee for manual eps was waived</description>
    <label>Fee Waive Date</label>
    <type>Date</type>
</CustomField>