force-app/main/default/objects/Add_On_Products__c/fields/File_Submission_Method__c.field-meta.xml
<CustomField>
    <fullName>File_Submission_Method__c</fullName>
    <description>How will Ubiquity receive files?</description>
    <inlineHelpText>How will Ubiquity receive files?</inlineHelpText>
    <label>File Submission Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secure Plan Sponsor Transfer</fullName>
            </value>
            <value>
                <fullName>Manual Retrieval</fullName>
            </value>
            <value>
                <fullName>Third Party Data Entry</fullName>
            </value>
            <value>
                <fullName>Screen Scrape</fullName>
            </value>
            <value>
                <fullName>Third Party Integrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>