force-app/main/default/objects/Add_On_Products__c/fields/File_Upload_Method__c.field-meta.xml
<CustomField>
    <fullName>File_Upload_Method__c</fullName>
    <description>How is the file uploaded to Paradigm?</description>
    <inlineHelpText>How is the file uploaded to Paradigm?</inlineHelpText>
    <label>File Upload Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Batch Upload</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>SFTP</fullName>
            </value>
            <value>
                <fullName>Universal Import Tool</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>