force-app/main/default/objects/Add_On_Products__c/fields/First_Year_Audit__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Client is completing Audit with Ubiquity for the first time</description>
    <inlineHelpText>Indicates Client is completing Audit with Ubiquity for the first time</inlineHelpText>
    <label>First Year Audit</label>
    <type>Checkbox</type>
</CustomField>