force-app/main/default/objects/Add_On_Products__c/fields/Form_5500_Extension__c.field-meta.xml
<CustomField>
    <fullName>Form_5500_Extension__c</fullName>
    <description>Date extension for Form 5500 is requested</description>
    <inlineHelpText>Date extension for Form 5500 is requested</inlineHelpText>
    <label>Form 5500 Extension</label>
    <type>Date</type>
</CustomField>