force-app/main/default/objects/Add_On_Products__c/fields/Hold_Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Expected_End_Date__c</fullName>
    <description>Date the Hold is expected to end.</description>
    <inlineHelpText>Date the Hold is expected to end.</inlineHelpText>
    <label>Hold Expected End Date</label>
    <type>Date</type>
</CustomField>