force-app/main/default/objects/Add_On_Products__c/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <description>Reason integration was put on hold.</description>
    <inlineHelpText>Reason integration was put on hold.</inlineHelpText>
    <label>Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>