force-app/main/default/objects/Add_On_Products__c/fields/Hold_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Release_Date__c</fullName>
    <description>Date Hold was released</description>
    <inlineHelpText>Date Hold was released</inlineHelpText>
    <label>Hold Release Date</label>
    <type>Date</type>
</CustomField>