force-app/main/default/objects/Add_On_Products__c/fields/Hold_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Start_Date__c</fullName>
    <description>Date the Hold started</description>
    <inlineHelpText>Date the Hold started</inlineHelpText>
    <label>Hold Start Date</label>
    <type>Date</type>
</CustomField>