force-app/main/default/objects/Add_On_Products__c/fields/Hours_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Hours_Header_Name__c</fullName>
    <description>Name of Hours Column in client file</description>
    <inlineHelpText>Name of Hours Column in client file</inlineHelpText>
    <label>Hours Header Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>