force-app/main/default/objects/Add_On_Products__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <description>Hours worked on project</description>
    <inlineHelpText>Hours worked on project</inlineHelpText>
    <label>Hours Worked</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>