force-app/main/default/objects/Add_On_Products__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>Add-On Products</relationshipLabel>
    <relationshipName>Add_On_Products</relationshipName>
    <type>Lookup</type>
</CustomField>