force-app/main/default/objects/Add_On_Products__c/fields/Integration_Authorization_Received__c.field-meta.xml
<CustomField>
    <fullName>Integration_Authorization_Received__c</fullName>
    <description>Confirms whether the form was received from the client to begin the integration set up.</description>
    <inlineHelpText>Confirms whether the form was received from the client to begin the integration set up.</inlineHelpText>
    <label>Integration Authorization Received</label>
    <type>Date</type>
</CustomField>