force-app/main/default/objects/Add_On_Products__c/fields/Integration_Completed__c.field-meta.xml
<CustomField>
    <fullName>Integration_Completed__c</fullName>
    <description>Date integration is completed.</description>
    <inlineHelpText>Date integration is completed.</inlineHelpText>
    <label>Integration Setup Completed</label>
    <type>Date</type>
</CustomField>