force-app/main/default/objects/Add_On_Products__c/fields/Integration_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Live_Date__c</fullName>
    <description>When this date is filled out it sets the Add-On Stage to &quot;Completed Setup&quot;</description>
    <inlineHelpText>When this date is filled out it sets the Add-On Stage to &quot;Completed Setup&quot;</inlineHelpText>
    <label>Integration Live Date</label>
    <type>Date</type>
</CustomField>