force-app/main/default/objects/Add_On_Products__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>What type of integration do they have?</description>
    <inlineHelpText>What type of integration do they have?</inlineHelpText>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>360</fullName>
            </value>
            <value>
                <fullName>360 - Return File Only</fullName>
            </value>
            <value>
                <fullName>180 - Limited</fullName>
                <isActive>false</isActive>
                <label>180 - Limited</label>
            </value>
            <value>
                <fullName>360 - Limited</fullName>
                <isActive>false</isActive>
                <label>360 - Limited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>