force-app/main/default/objects/Add_On_Products__c/fields/Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Change__c</fullName>
    <inlineHelpText>This date gets stamped every time the Add-On Stage changes to determine if we should be sending auto emails.</inlineHelpText>
    <label>Last Stage Change</label>
    <type>Date</type>
</CustomField>