force-app/main/default/objects/Add_On_Products__c/fields/Loan_Source_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Source_Header_Name__c</fullName>
    <label>Loan Source Header Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>