force-app/main/default/objects/Add_On_Products__c/fields/Login_Credentials_Received__c.field-meta.xml
<CustomField>
    <fullName>Login_Credentials_Received__c</fullName>
    <description>Date Login Credentials from third party is received</description>
    <inlineHelpText>Date Login Credentials from third party is received</inlineHelpText>
    <label>Login Credentials Received</label>
    <type>Date</type>
</CustomField>