force-app/main/default/objects/Add_On_Products__c/fields/Matrix_Fees_Billed__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Fees_Billed__c</fullName>
    <description>Date Matrix Fees were billed (Matrix plans only)</description>
    <inlineHelpText>Date Matrix Fees were billed (Matrix plans only)</inlineHelpText>
    <label>Matrix Fees Billed</label>
    <type>Date</type>
</CustomField>