force-app/main/default/objects/Add_On_Products__c/fields/Multiple_Funding_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Funding_Accounts__c</fullName>
    <description>Does the Plan have multiple funding accounts?</description>
    <inlineHelpText>Does the Plan have multiple funding accounts?</inlineHelpText>
    <label>Multiple Funding Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>