force-app/main/default/objects/Add_On_Products__c/fields/Multiple_Locations__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Locations__c</fullName>
    <description>Does the Plan have multiple locations?</description>
    <inlineHelpText>Does the Plan have multiple locations?</inlineHelpText>
    <label>Multiple Locations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>