force-app/main/default/objects/Add_On_Products__c/fields/Multiple_Payroll_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Payroll_Schedules__c</fullName>
    <description>Does the Plan have multiple payroll schedules?</description>
    <inlineHelpText>Does the Plan have multiple payroll schedules?</inlineHelpText>
    <label>Multiple Payroll Schedules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>