force-app/main/default/objects/Add_On_Products__c/fields/Needs_Form_5500__c.field-meta.xml
<CustomField>
    <fullName>Needs_Form_5500__c</fullName>
    <description>Does Audit need Form 5500? Clients who have Deconverted in the prior year do not need a Form 5500.</description>
    <inlineHelpText>Does Audit need Form 5500? Clients who have Deconverted in the prior year do not need a Form 5500.</inlineHelpText>
    <label>Needs Form 5500</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>