force-app/main/default/objects/Add_On_Products__c/fields/Next_Payroll_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payroll_Check_Date__c</fullName>
    <description>EPS Add On Product field from EPS Survey</description>
    <inlineHelpText>Check Date of next upcoming payroll</inlineHelpText>
    <label>Next Payroll Check Date</label>
    <type>Date</type>
</CustomField>