force-app/main/default/objects/Add_On_Products__c/fields/No_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>No_Start_Date__c</fullName>
    <description>Date Product No-Starts</description>
    <inlineHelpText>Date Product No-Starts</inlineHelpText>
    <label>No-Start Date</label>
    <type>Date</type>
</CustomField>