force-app/main/default/objects/Add_On_Products__c/fields/Off_Cycle_Contact__c.field-meta.xml
<CustomField>
    <fullName>Off_Cycle_Contact__c</fullName>
    <description>EPS Add on Product field - updated from EPS Survey</description>
    <inlineHelpText>Client agrees to notify Ubiquity in advance of off cycle payroll</inlineHelpText>
    <label>Off Cycle Notification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>