force-app/main/default/objects/Add_On_Products__c/fields/Off_Cycle_Payrolls__c.field-meta.xml
<CustomField>
    <fullName>Off_Cycle_Payrolls__c</fullName>
    <description>EPS Add on Product field - updated from EPS Survey</description>
    <inlineHelpText>Does the client run payrolls that are different form the up to 3 regular payroll schedules?</inlineHelpText>
    <label>Off Cycle Payrolls</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>