force-app/main/default/objects/Add_On_Products__c/fields/Opinion_Letter_Received__c.field-meta.xml
<CustomField>
    <fullName>Opinion_Letter_Received__c</fullName>
    <description>Date opinion letter received from auditor</description>
    <inlineHelpText>Date opinion letter received from auditor</inlineHelpText>
    <label>Opinion Letter Received</label>
    <type>Date</type>
</CustomField>