force-app/main/default/objects/Add_On_Products__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity the Add-On Product is sold from</description>
    <inlineHelpText>Opportunity the Add-On Product is sold from</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Add-On Products</relationshipLabel>
    <relationshipName>Add_On_Products</relationshipName>
    <type>Lookup</type>
</CustomField>