force-app/main/default/objects/Add_On_Products__c/fields/Opportunity_Notes__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Notes__c</fullName>
    <description>Notes from Opportunity Page</description>
    <inlineHelpText>Notes from Opportunity Page</inlineHelpText>
    <label>Opportunity Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>