force-app/main/default/objects/Add_On_Products__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>Opportunity Owner</description>
    <formula>Opportunity__r.Owner.FirstName + &quot; &quot; + Opportunity__r.Owner.LastName</formula>
    <inlineHelpText>Opportunity Owner</inlineHelpText>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>