force-app/main/default/objects/Add_On_Products__c/fields/Paradigm_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Confirmation_Sent__c</fullName>
    <description>Date confirmation of successful payroll submission email sent</description>
    <inlineHelpText>Date confirmation of successful payroll submission email sent</inlineHelpText>
    <label>Paradigm Confirmation Sent</label>
    <type>Date</type>
</CustomField>