force-app/main/default/objects/Add_On_Products__c/fields/Passed_Validation_Check__c.field-meta.xml
<CustomField>
    <fullName>Passed_Validation_Check__c</fullName>
    <description>Did Payroll file pass all validation checks?</description>
    <inlineHelpText>Did Payroll file pass all validation checks?</inlineHelpText>
    <label>Passed Validation Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>