force-app/main/default/objects/Add_On_Products__c/fields/Payroll_Integration__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Integration__c</fullName>
    <description>Does the client have direct integration through their Payroll Provider?</description>
    <inlineHelpText>Does the client have direct integration through their Payroll Provider?</inlineHelpText>
    <label>Payroll Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>