force-app/main/default/objects/Add_On_Products__c/fields/Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Provider__c</fullName>
    <description>Payroll provider from the Opportunity</description>
    <formula>Opportunity__r.Payroll_Provider__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payroll provider from the Opportunity</inlineHelpText>
    <label>Payroll Provider</label>
    <type>Text</type>
</CustomField>