force-app/main/default/objects/Add_On_Products__c/fields/Payroll_Reconciliation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Reconciliation_Frequency__c</fullName>
    <description>Payroll reconciliation frequency</description>
    <inlineHelpText>Payroll reconciliation frequency</inlineHelpText>
    <label>Payroll Reconciliation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>